syntax = "proto3";


option go_package = "server/proto/publish;publish";
import "server/proto/common/video.proto";

message PublishListRequest {
  int64 user_id = 1; // 用户id
  string token = 2;  // 用户鉴权token
}

message PublishListResponse {
  int32 status_code = 1;          // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3;  // 用户发布的视频列表
}

message PublishActionRequest {
  string token = 1; // 用户鉴权token
  bytes data = 2;   // 视频数据
  string title = 3; // 视频标题
}

message PublishActionResponse {
  int32 status_code = 1;          // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}