syntax = "proto3";

option go_package = "server/proto;proto";

import "video_user.proto";

message Video {
  int64 id = 1;             // 视频唯一标识
  User author = 2;          // 视频作者信息
  string play_url = 3;      // 视频播放地址
  string cover_url = 4;     // 视频封面地址
  int64 favorite_count = 5; // 视频的点赞总数
  int64 comment_count = 6;  // 视频的评论总数
  bool is_favorite = 7;     // true-已点赞，false-未点赞
  string title = 8;         // 视频标题
}